Updated comments concerning using V2 of the list time entries. Note that VS uses the take and skip from the DB to better get record handling for large number of records. Not really needed for small number of records, but it is a best practice to do paged gets for records for large number of row. The downside is that more fetches from the DB are needed.

--- a/TimeTracker.Client/Pages/TimesEntriesV2.razor
+++ b/TimeTracker.Client/Pages/TimesEntriesV2.razor
@@ -38,6 +38,12 @@
 }
 
 @code {
+
+    // The Change with this version is that we are using the QuickGrid component
+    //   with paged retrivals of date from the server, as opposed to the
+    //   get all of the records into memory and then paging them on the client.
+    //   This is a much more efficient way to do this.
+
     PaginationState pagination = new PaginationState { ItemsPerPage = 10 };
     GridItemsProvider<TimeEntryResponse>? timeEntriesProvider;
 
