--- a/TimeTracker.Client/Layout/NavMenu.razor
+++ b/TimeTracker.Client/Layout/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="timeentriesV2">
+            <NavLink class="nav-link" href="timeentries">
                 <span class="bi bi-clock-xfill" aria-hidden="true"></span> Time Entries
             </NavLink>
         </div>
