--- a/TimeTracker.Client/Pages/EditProjects.razor
+++ b/TimeTracker.Client/Pages/EditProjects.razor
@@ -3,6 +3,7 @@
 @inject IProjectService ProjectService
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
+@attribute [Authorize]
 
 @if (Id is null)
 {
