--- a/TimeTracker.Client/_Imports.razor
+++ b/TimeTracker.Client/_Imports.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Components.QuickGrid
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
 @using TimeTracker.Client
 @using TimeTracker.Client.Layout
@@ -14,3 +16,7 @@
 @using TimeTracker.Shared.Entities
 @using TimeTracker.Client.Shared
 @using TimeTracker.Client.Services
+@using TimeTracker.Shared.Models.Account
+@using TimeTracker.Shared.Models.Login
+@using Blazored.Toast
+@using Blazored.Toast.Services
