--- a/TimeTracker.Client/Layout/NavMenu.razor
+++ b/TimeTracker.Client/Layout/NavMenu.razor
@@ -21,6 +21,10 @@
                         <span class="bi bi-clock-xfill" aria-hidden="true"></span> Time Entries
                     </NavLink>
                 </div>
+            </Authorized>
+        </AuthorizeView>
+        <AuthorizeView Roles="Admin">
+            <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="projects">
                         <span class="bi bi-lightbulb-xfill" aria-hidden="true"></span> Projects
