--- a/TimeTracker.Client/Pages/EditTimeEntry.razor
+++ b/TimeTracker.Client/Pages/EditTimeEntry.razor
@@ -19,31 +19,26 @@ else
 
 <EditForm Model="timeEntry" OnValidSubmit="HandleSubmit">
     <DataAnnotationsValidator />
-    <div>
-        <label for="startDate">Start</label>
-        <InputDate id="startDate" Type="InputDateType.DateTimeLocal" @bind-Value="timeEntry.Start" class="form-control"/>
-    </div>
-    <div>
-        <label for="endDate">End</label>
-        <InputDate id="endDate" Type="InputDateType.DateTimeLocal" @bind-Value="timeEntry.End" class="form-control" />
-    </div>
-    <div>
-        <label for="project">Project</label>
-        <InputSelect id="project" @bind-Value="timeEntry.ProjectId" class="form-control">
-           <option value="0">Select a project</option>
-            @foreach (var project in ProjectService.Projects)
-            {
-                <option value="@project.Id">@project.Name</option>
-            }
-        </InputSelect>
-        <ValidationMessage For="() => timeEntry.ProjectId" />
-    </div>
+
+    <MyInputDateTime Id="startDate" Label="Start" 
+        @bind-Value="timeEntry.Start" ValFor="() => timeEntry.Start" />
+    <MyInputDateTimeNullable Id="endDate" Label="End" 
+        @bind-Value="timeEntry.End" ValFor="() => timeEntry.End" />
+    <MyInputSelect Id="project" Label="Project"
+        @bind-Value="timeEntry.ProjectId" ValFor="() => timeEntry.ProjectId" 
+        Items = "ProjectService.Projects
+                  .Select(p => new MyInputSelect.SelectListItem {
+                    Value = p.Id.ToString(), DisplayName = p.Name
+         })"/>
+
+    <div class="flex gap-4">
     @if(Id is not null)
     {
-        <button type="button" class="btn btn-danger mt-2 mx-1" @onclick="DeleteTimeEntry">Delete</button>
+        <MyButton Text="Delete" Level="MyButton.ButtonLevel.Danger" AddMarginTop = "true" OnClick="DeleteTimeEntry"/>
     }
-    <button type="submit" class="btn btn-primary mt-2">Save</button>
 
+    <MyButton Text="Save" Type="submit" Level="MyButton.ButtonLevel.Primary" AddMarginTop="true" />
+    </div>
 </EditForm>
 
 @code {
