--- a/TimeTracker.Client/_Imports.razor
+++ b/TimeTracker.Client/_Imports.razor
@@ -21,3 +21,5 @@
 @using TimeTracker.Shared.Models.Login
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using System.Diagnostics.CodeAnalysis
+@using System.Linq.Expressions
