Added Radzen Chart

--- a/TimeTracker.Client/Layout/TimeTrackerLayout.razor
+++ b/TimeTracker.Client/Layout/TimeTrackerLayout.razor
@@ -46,7 +46,9 @@
     </div>
 </header>
 <main class="mx-4">
-  @Body
+  <div class="mx-auto max-w-screen-xl sm:px-6 lg:px-8">
+   @Body
+  </div>
 </main>
 
 @code {
