--- a/TimeTracker.Client/_Imports.razor
+++ b/TimeTracker.Client/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using System.Security.Claims
+@using System.Globalization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -23,3 +24,5 @@
 @using Blazored.Toast.Services
 @using System.Diagnostics.CodeAnalysis
 @using System.Linq.Expressions
+@using Radzen
+@using Radzen.Blazor
